Fix Render deployment: correct gunicorn start command to cd into backend directory

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: car-rental-website
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --chdir backend --bind 0.0.0.0:$PORT app:app
+    startCommand: cd backend && gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
